  - BREAKING - WISE/tagger must now use http.request.FIELD/http.response.FIELD
               when referencing header defined with headers-http-request/headers-http-response
  - release - zstd 1.5.5, nghttp2 1.56.0, curl 8.3.0, maxmind 1.7.1, yara 4.2.3
  - release - node v18.18.0 except Centos 7 and Ubuntu 18 build which still uses v16
  - all - all programs support same config file formats (json/ini) and
  - all - authMode setting added
  - all - authMode=basic added
  - all - notifiers for parliament and arkime merged
          conflicts mitigated by appending "Parliament" to parliament notifiers
  - all - drop privileges is now AFTER http(s) list
          retrieval (file, elasticsearch)
  - capture - moloch converted to arkime
  - capture - override ips can now set any field
  - capture - overrideIpsFiles setting
  - capture - packetDropIpsFiles setting
  - capture - can have negative cert.validDays/cert.remainingDays (thanks mcgillowen)
  - capture - added cert.remainingSeconds/cert.remainingSeconds (thanks mcgillowen)
  - capture - cert.remainingDays is now based on the firstPacket of session
              instead of current time (thanks mcgillowen)
  - capture - JA4 support
  - capture - JA3/JA4 support for smtp STARTTLS
- - capture - always build zstd (except arch)
  - cont3xt - new bulk UI and support for bulk queries
  - cont3xt - lots of keyboard shortcut improvements
  - cont3xt - new array syntax for links substitution
  - cont3xt - new OpenSearch/Elasticsearch integration (config file only)
  - cont3xt - new viewRoles in config file per integration to control access
  - cont3xt - transfer ownership of resources
  - viewer - removed x-moloch-auth
  - viewer - files/history/stats now have cluster dropdown for multiviewer
  - viewer - http.request.FIELD and http.response.FIELD supported
  - viewer - add editor for resources
  - viewer - transfer ownership of resources
  - parliament - dashboard-only mode removed, if you want users to just see